--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,9 +3,9 @@ body {
 }
 header{
   background-color:#f4eee8;
-  height:130px;
+  height:160px;
   margin:0px;
-  width:450px;
+  width:100%;
 }
 
 header nav{
@@ -15,22 +15,22 @@ header nav{
 
 }
 img{float: left;
-width:100px;
+width:10opx;
 height:130px;}
 
-main h1{float: left;
+main h1{float: center;
   margin-left:0px;
 }
 
 header nav ul li{
   display: inline-block;
-  margin-right: 10px;}
+  margin-right:250px;}
 
 #first{
   background-color:#f5cebe;
-   width: 50%;
+   width: 100%;
   height: 150px;
-  margin: 30px 0 30px 10%;
+  margin: 30px 0 0px 0%;
 }
 #first h1{
  font-size: 40px;
@@ -44,10 +44,10 @@ header nav ul li{
 }
 
 #second{background-color:#999b84;
-   width: 50%;
+   width: 100%;
   height: 210px;
   text-align: center;
-  margin: 30px 0 30px 10%;}
+  margin: 30x 0 0px 0;}
 
 
   #second h2{font-size: 40px;
@@ -64,10 +64,10 @@ header nav ul li{
 
 #third{
   background-color:#a7d0cd;
-  width:50%;
+  width:100%;
   height:150px;
   text-align:center;
-  margin:30px 0 30px 10%;}
+  margin:30px 0 0px 0%;}
 
 #third p{ 
   -size: 40px;
